were undesirable effects during gapnotification 
time, it restarted the Timer, hence not 
notifying after gaptime.
- Properties class if not found key, 
does not throw exception, returns None 
for convenience.
- Targets are now reported in the final 
report
- Provided config file for convenience
- Report can be sent by email at 
any given time provided in config
- Updated documentation


====================================
06/08/09 release 1.45 
====================================

- tails from stdin
- Mail action for errors and fatals along 
with targets. This is actioned in either 
mail action with -m or silent action with -s
- Every log can have its own color if 
specified in configfile


====================================
06/07/09 release 1.42 
====================================
- For Errors and Fatals the log trace 
is included in the final report along with 
the datestamp.
- Final report now reports separately for each log  
- Updated Documentation


====================================
19/05/09 release 1.4 
====================================
- Better regex for ColorParser, which 
fixes definitely the fact of having for 
instance the "error" and "warn" string 
in same log trace. First to appear, the 
one that takes preference.

- Updated doc, at least you need Python 
2.4

- Information included in setup.py to 
include log4tailer in Pypi site.

- Silent mode is for Fatal level only. 
Documentation has been updated.

====================================
17/05/09 release 1.3 
====================================
- Bug fixes numbers: 4,5,6
- New feature: Analytics
- Date was missing in mail action
Fixed.

====================================
release 1.2
====================================
- New feature: PauseModes. For each 
level it will pause the tailing. 
debug and info no pause by default
warn 1 seconds
error 3 seconds
fatal and targets 5 seconds

- At very beginning (first tail) that 
tails last 10 lines in logs, only 